# CyBuilder

./: .cyBuilder.toml  .gitignore  CyBuilder.py  LICENSE  README.md  pyproject.toml
CyBuilder/: __init__.py  __main__.py  config.py  core.py  incremental.py  parallel.py  utils.py
tests/: conftest.py  test_config.py  test_incremental.py  test_parallel.py  test_utils.py
