[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CyBuilder"
version = "0.1.0"
description = "python项目编译器 - 将 .py 文件编译为 .pyd 文件"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "tqdm>=4.66.0",
]

[project.scripts]
CyBuilder = "CyBuilder:main"

[tool.hatch.build.targets.wheel]
packages = ["CyBuilder"]

# 排除不需要打包的目录和文件
[tool.hatch.build]
exclude = [
    "build_temp/",
    "build/",
    "dist/",
    "dist_test/",
    ".venv/",
    ".vscode/",
    "*.pyc",
    "__pycache__/",
    "*.pyd",
    ".CyBuilder_cache.json",
]

[dependency-groups]
dev = [
    "cython>=3.2.4",
    "setuptools>=75.3.4",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
